...
                  key: Key('errorMessage'), // For testability
                  style: TextStyle(
                      color: Colors.red, fontSize: 16), // Error message styling
                ),
              SizedBox(height: 20), // Added space for better UI appearance
              TextField(
                key: Key('BTC-input'), // Corrected Key
                controller: usdTextController,
                decoration: InputDecoration(
                  border: OutlineInputBorder(),
                  labelText: 'Enter BTC',
                  errorText:
                      null, // Make sure this is not used to show dynamic error messages
                ),
              ),
              SizedBox(height: 20), // Added space for better UI appearance
              ElevatedButton(
                key: Key('Convert_USD_Button'),
                child: Text('Convert'),
                onPressed: () {
                  final btcValue = double.tryParse(usdTextController.text);
                  if (btcValue == null) {
                    setState(() {
                      errorMessage = "Invalid BTC Value";
...
